--- a/Shashidar/table.html
+++ b/Shashidar/table.html
@@ -17,7 +17,7 @@
 </tr>
 
 <tr>
-    <td><img title="skype table picture" src="C:\Users\Shashidar Reddy\Desktop\shashidar\skype.png" width="40" height="40" alt="Microsoft Co"/></td>
+    <td><img title="skype table picture" src="IMAGES\skype.png" width="40" height="40" alt="Microsoft Co"/></td>
     <td>Anish</td>
     <td>Kumar</td>
     <td>Skype</td>
@@ -25,14 +25,14 @@
 </tr>
 
 <tr>
-<td><img title="fb table picture" src="C:\Users\Shashidar Reddy\Desktop\shashidar\FB.png"/></td>
+<td><img title="fb table picture" src="IMAGES\FB.png"/></td>
     <td>Leela</td>
     <td>Raghava</td>
     <td>Facebook</td>
     <td>$200000</td>
 </tr>
 <tr>
-    <td><img title="snapchat table picture" src="C:\Users\Shashidar Reddy\Desktop\shashidar\Snap.png"/>
+    <td><img title="snapchat table picture" src="IMAGES\Snap.png"/>
 </td>
     <td>Sri</td>
     <td>Harsha</td>
@@ -40,5 +40,5 @@
     <td>$300000</td>
   </tr>
 </table>
-<p><a href="file:///C:/Users/Shashidar%20Reddy/Desktop/shashidar/index.html">Back <a/><p></p>
+<p><a href="index.html">Back <a/><p></p>
 </body>
