--- a/Shashidar/index.html
+++ b/Shashidar/index.html
@@ -7,9 +7,9 @@
 <h2 class="indexpage">Index</h2>
 <ol type="1">
 <li>Employee details</li>
-<p><a href="file:///C:/Users/Shashidar%20Reddy/Desktop/shashidar/table.html?g=g">Click to Open table details </a><p>
+<p><a href="table.html">Click to Open table details </a><p>
 <li>Paragraphs</li>
-<p><a href="file:///C:/Users/Shashidar%20Reddy/Desktop/shashidar/paragraph.html">click to open Paragraph <a/><p>
+<p><a href="paragraph.html">click to open Paragraph <a/><p>
     <p><a id="purchase" href="#">Nothing<a/></p>
 
 
