--- a/Shashidar/paragraph.html
+++ b/Shashidar/paragraph.html
@@ -19,7 +19,7 @@ Consequently, Node.js represents a "JavaScript everywhere" paradigm, unifying we
 <h2>Python</h2>
 <p>Python is an interpreted, high-level, general-purpose programming language. Created by Guido van Rossum and first released in 1991, Python's design philosophy emphasizes code readability with its notable use of significant whitespace.
 Its language constructs and object-oriented approach aim to help programmers write clear, logical code for small and large-scale projects.</p>
-<p><a href="file:///C:/Users/Shashidar%20Reddy/Desktop/shashidar/index.html">Back <a/><p></p>
+<p><a href="index.html">Back </a><p></p>
 
 </article>
 </body>
